@@ -1,7 +1,7 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.389 2005/09/22 16:38:09 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.390 2005/09/22 17:56:53 agaffney Exp $
 
 *GLI-0.2 (4 Aug 2005)
 
@@ -10,6 +10,7 @@
   add code in _edit_config() to comment line where variable is defined
   previously
   insert new line under previous definition of variable if it exists
+  small _edit_config() cleanup
 
   21 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/templates/x86ArchitectureTemplate.py:
